TOC pour Maxime

--- a/template-epub/OEBPS/colophon.xhtml
+++ b/template-epub/OEBPS/colophon.xhtml
@@ -6,9 +6,13 @@
     <title>Livrable, Colophon</title>
     <link rel="stylesheet" type="text/css" href="Styles/epub.css"/>
   </head>
-  <body>
-    <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon">
-      <p class="noindent" style="margin:top: 3em;">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% par Livrable <a href="https://github.com/oeuvres/Livrable">github.com/oeuvres/Livrable</a> (© 2013 frederic.glorieux@fictif.org, © 2014–2016 frederic.glorieux@fictif.org et LABEX OBVIL).</p>
+  <body style="position: relative; ">
+    <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon" style="font-size: 85%; position: absolute; top: 50%; ">
+      <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec Livrable,
+        <br/> <a href="https://github.com/oeuvres/Livrable">github.com/oeuvres/Livrable</a>
+        <br/>logiciel libre développé par Frédéric Glorieux pour le LABEX OBVIL (Université Paris-Sorbonne).
+      </p>
+      <p style=" text-align: center;"><a href="http://obvil.paris-sorbonne.fr/"><img src="Images/obvil_logo.png" /></a></p>
     </section>
   </body>
 </html>
