Devrait être plus solide sur les droits des dossiers.

--- a/template-epub/OEBPS/colophon.xhtml
+++ b/template-epub/OEBPS/colophon.xhtml
@@ -10,9 +10,7 @@
     <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon" style="font-size: 85%; position: absolute; top: 50%; ">
       <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec Livrable,
         <br/> <a href="https://github.com/oeuvres/Livrable">github.com/oeuvres/Livrable</a>
-        <br/>logiciel libre développé par Frédéric Glorieux pour le LABEX OBVIL (Université Paris-Sorbonne).
-      </p>
-      <p style=" text-align: center;"><a href="http://obvil.paris-sorbonne.fr/"><img src="Images/obvil_logo.png" /></a></p>
+        <br/>logiciel libre développé par Frédéric Glorieux.</p>
     </section>
   </body>
 </html>
