Couverture et réglages toc

--- a/template-epub/OEBPS/colophon.xhtml
+++ b/template-epub/OEBPS/colophon.xhtml
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="Styles/epub.css"/>
   </head>
   <body style="position: relative; ">
-    <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon" style="font-size: 85%; position: absolute; top: 50%; ">
+    <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon">
       <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec Livrable,
         <br/> <a href="https://github.com/oeuvres/Livrable">github.com/oeuvres/Livrable</a>
         <br/>logiciel libre développé par Frédéric Glorieux.</p>
