Renommage Teinte > teinte

--- a/template-epub/OEBPS/colophon.xhtml
+++ b/template-epub/OEBPS/colophon.xhtml
@@ -8,8 +8,8 @@
   </head>
   <body style="position: relative; ">
     <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon">
-      <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec Livrable,
-        <br/> <a href="https://github.com/oeuvres/Livrable">github.com/oeuvres/Livrable</a>
+      <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec <i>livrable</i>,
+        <br/> <a href="https://github.com/oeuvres/livrable">github.com/oeuvres/livrable</a>
       </p>
     </section>
   </body>
