--- a/template-epub/OEBPS/colophon.xhtml
+++ b/template-epub/OEBPS/colophon.xhtml
@@ -6,7 +6,7 @@
     <title>Livrable, Colophon</title>
     <link rel="stylesheet" type="text/css" href="Styles/epub.css"/>
   </head>
-  <body style="position: relative; ">
+  <body>
     <section xmlns:epub="http://www.idpf.org/2007/ops" epub:type="colophon">
       <p class="noindent" style="margin-top: 3em; margin-bottom: 2em; text-align: center; ">Issu d’un texte XML/TEI, ce livre a été généré automatiquement le %date% avec <i>livrable</i>,
         <br/> <a href="https://github.com/oeuvres/livrable">github.com/oeuvres/livrable</a>
